stylesheet.css
body{
	/*background-color: rgba(29, 27, 27, 0.75);*/
	background-image: url(images/image3.jpg);
	background-size: cover;
	/*Temp*/
	margin: 0;
}

#head{
	/*background-image: url(NorthCampus.jpg);
	background-size: cover;
	background-position: center;*/
	background-color: rgba(200,200,200,0.75);
	margin: -1% -1% 0% -1%;
	height: 50px
}
nav {
	/*background-color: rgba(0, 110, 255, 0.3);*/
	padding: 1px 1px 1px 1px;
	height: 59px;
}

ol.navbar li {
	background-color: rgba(200, 200, 200, 0.75);
	border-radius: 9px 9px 9px 9px;
	color: white;
	margin: 2px;
	padding: 2px 2px 2px 2px;
	display: inline;
}

ol.navbar a{
	border-radius: 9px 9px 9px 9px;
	color: black;
	text-decoration: none;
}

ol.navbar a:hover{
	background-color: grey;
	color: rgba(220, 220, 220, 0.75);
}

#h1 {
	display: block;
	/*(-1.3% -1.3% -1% -1.3%;)*/
	margin: 0 auto; 
	/*background-color: rgb(123, 123, 135);
	border: 1px ridge black;*/
	text-align: center;
	font-size: 30px;
	font-family: 'Times New Roman', Times, serif;
	font-weight: bold;
	color: black;
}
/*
.left{
	background-color: rgba(0, 0, 255, 0.75);
	color: white;
    float: left;
    padding: 1%;
	margin: 0% 0% 0% -1%;
    width: 10%;
	height: 110vh;
}

.right{
	background-color: rgba(0, 0, 255, 0.75);
	color: white;
	/**clear: right;**//*
    float: right;
    padding: 1%;
	margin: 0% -1% 0% 0%;
    width: 10%;
	height: 110vh;
}*/

#main{
	background-color: rgba(200, 200, 200, 0.90);
    padding: 1rem;
	margin: 0 auto; /*margin: 0 auto;*/
    width: 90%;
	/*margin-top: 50px;*/
	/*margin-bottom: 50px;*/
	border-radius: 10%;
}

@media (max-width: 768px) {
	#main{
		width: 95%;
		box-sizing: border-box;
		margin: 0 auto 50px auto; /*margin: 0 auto;*/
    	width: min(90%, 900px);
	}
}

.homecontent{
	margin: 0 auto;
	font-family: 'Times New Roman', Times, serif;
	font-size: 17px;
}

.Middle{
	padding: 1%;
	margin-left: -1.1%;
	margin-right: -1.1%;
}

.backcontent1{
	background-image: url(NorthCampus.jpg);
	background-size: cover;
	background-position: center;
	margin: -1.3% -1.3% -1% -1.3%;
}
.content1{
	background-color: rgba(200, 200, 200, 0.75);
    border: 1px ridge navy;
    border-radius: 50%;
    box-shadow: 10px 10px 5px #888888;
    margin: 5% 10% 5% 10%;
    padding: 10%;
}

p {
	font-family: 'Times New Roman', Times, serif;
	text-align: center;
	font-weight: bold;
	font-size: 16px;
}

#Resume{
	display: block;
	margin: 0 auto;
}

.icon-Container{
	display: flex;
	justify-content: center;
	gap: 20px;
	margin-top: 20px;
}

.icon-wrap{
	display: inline-block;
	animation: bounce 2s infinite ease-in-out;
}

.icon{
	width: 50px;
	height: 50px;
	cursor: pointer;
}

@keyframes bounce {
	0%, 100% { transform: translateY(0); }
	50% { transform: translateY(-8px); }
}

.icon:hover {
	transform: scale(1.1);
	transition: 0.2s;
}

.circle{
	width: 150px;
	height: 150px;
	border-radius: 50%;
	overflow: hidden;
	margin: auto;
	margin-top: 2px;
}
.profileImg{
	width: 100%;
	height: 100%;
}

.innerMid{
	background-color:  rgba(54, 53, 65, 0.65);
	padding: 10px;
	margin-top: 10px;
	border-radius: 10px;
	border-color: black;
}

#download{
	text-decoration: none;
}

.button{
	display: block;
	background-color:  rgba(200, 200, 200, 0.75);
	margin: 0 auto;
	border-radius: 9px 9px 9px 9px; 
	cursor: pointer;
	overflow: hidden;
	font-family: 'Times New Roman', Times, serif;
	font-size: 16px;

}

.button:hover{
	transform: scale(1.1);
}

/*.footer{
	background-image: url(images/NiceBackground.jpg);
	margin: 0% -1.3% 0% -1.3%;
	padding: 1%;
	display: block;
	line-height: 100px;
	text-align: center;
	color: white;
	font-size: 20px;
	font-family: perpetua;
	font-weight: bold;
	height: 100px;
}*/

